--- a/MyWebsite/Views/OpenWeather/Index.cshtml
+++ b/MyWebsite/Views/OpenWeather/Index.cshtml
@@ -35,7 +35,7 @@
         <h4 id="registerFirst" class="weatherHiddenBlackTxt"><i style="color:#ff7733;" class="fas fa-exclamation"></i> Please log in or register to set city preferences and manage weather alerts.</h4>
     }
 
-    <h4 id="setCityFirst" class="weatherHiddenBlackTxt"><i style="color:#ff7733;" class="fas fa-map-pin"></i> Please set your city to view the 5 day/hourly forecast.</h4>
+    <h4 id="setCityFirst" class="weatherHiddenBlackTxt"><i style="color:#ff7733;" class="fas fa-map-pin"></i> Please set your city by entering your city's name then toggling from 'off' to 'set city' to view the 5 day/hourly forecast.</h4>
 
     @*5 Day Forecast*@
     <div id="forecast" class="black-text" style="background-color: #c3cce0 !important; display: none;">
