--- a/MyWebsite/Views/Shared/_BudgetLimitPartial.cshtml
+++ b/MyWebsite/Views/Shared/_BudgetLimitPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using PortfolioWebsite.Models
-@model IEnumerable<PortfolioWebsite.Models.BudgetEntries>
+@model IEnumerable<PortfolioWebsite.Models.BudgetApp.BudgetItems>
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 @{string user = User.Identity.Name; }
